--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-*/.terraform/*
-
 .idea
 */.idea/*
 .idea/**
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
@@ -10,7 +9,6 @@
 # Crash log files
 crash.log
 crash.*.log
-
 
 *.hcl
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
@@ -36,10 +34,13 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
-.idea/
-vm_images/
-terraform/.terraform*
-terraform/terraform.*
+
+terraform/*/.terraform*
+
+vm_images/*
+!vm_images/README.md
+
+configs/keys/*.pem
+configs/keys/*.pub
 
 scripts/gen/target/
-
