--- a/configs/push_token_args_listener.service
+++ b/configs/push_token_args_listener.service
@@ -2,6 +2,7 @@
 Description=Push Kubernetes join token to workers
 
 [Service]
+User=ubuntu
 ExecStart=/bin/bash /home/ubuntu/kubernetes-lab-setup/scripts/kube_setup/push_token_args_listener.sh
 
 [Install]
